examples/test/testpolicy10600.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10600
  namespace: namespace113
spec:
  podSelector:
    matchLabels:
      key2: value23
      key38: value42
      key12: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value8
      podSelector:
        matchLabels:
          key35: value7
          key40: value42
          key47: value34
